<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <activity
        android:id="@+id/detail_activity"
        android:name="com.example.eventdicoding.ui.DetailActivity"
        android:label="activity_detail"
        tools:layout="@layout/activity_detail" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.eventdicoding.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_fragmentHome_to_detail_activity"
            app:destination="@id/detail_activity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="com.example.eventdicoding.ui.UpcomingFragment"
        android:label="@string/title_upcoming"
        tools:layout="@layout/fragment_upcoming">
        <action
            android:id="@+id/action_fragmentUpcoming_to_detail_activity"
            app:destination="@id/detail_activity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_finished"
        android:name="com.example.eventdicoding.ui.FinishedFragment"
        android:label="@string/title_finished"
        tools:layout="@layout/fragment_finished">
        <action
            android:id="@+id/action_fragmentFinished_to_detail_activity"
            app:destination="@id/detail_activity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.example.eventdicoding.ui.FavoriteFragment"
        tools:layout="@layout/fragment_favorite">
        <action
            android:id="@+id/action_fragmentFavorite_to_detail_activity"
            app:destination="@id/detail_activity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.eventdicoding.ui.SettingsFragment"
        tools:layout="@layout/fragment_settings" />
</navigation>
