<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_lay_arrow_back"
                android:contentDescription="@string/back_button"
                style="@style/ic_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <TextView
                android:id="@+id/tv_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/title_detail"
                style="@style/tv_toolbar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/back_button"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:id="@+id/sv_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_event_image"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/event_image"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                app:layout_constraintTop_toBottomOf="@id/iv_event_image">

                <TextView
                    android:id="@+id/event_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/tv_event_detail_title"
                    tools:text="DevCoach 171: Machine Learning in Google Cloud | Vertex AI di Google Cloud"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/organizer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/owner_name"
                    style="@style/tv_event_detail_label"
                    app:layout_constraintTop_toBottomOf="@id/event_title"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/event_organizer"
                    style="@style/tv_event_detail_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/organizer"
                    app:layout_constraintTop_toBottomOf="@id/event_title"
                    tools:text="Category" />

                <TextView
                    android:id="@+id/category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    style="@style/tv_event_detail_label"
                    app:layout_constraintTop_toBottomOf="@id/event_organizer"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/event_category"
                    style="@style/tv_event_detail_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/category"
                    app:layout_constraintTop_toBottomOf="@id/event_organizer"
                    tools:text="Category" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    style="@style/tv_event_detail_label"
                    app:layout_constraintTop_toBottomOf="@id/event_category"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/event_time"
                    style="@style/tv_event_detail_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/time"
                    app:layout_constraintTop_toBottomOf="@id/event_category"
                    tools:text="Category" />

                <TextView
                    android:id="@+id/location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    style="@style/tv_event_detail_label"
                    app:layout_constraintTop_toBottomOf="@id/event_time"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/event_location"
                    style="@style/tv_event_detail_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/location"
                    app:layout_constraintTop_toBottomOf="@id/event_time"
                    tools:text="Category" />

                <TextView
                    android:id="@+id/quota"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quota"
                    style="@style/tv_event_detail_label"
                    app:layout_constraintTop_toBottomOf="@id/event_location"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/event_quota"
                    style="@style/tv_event_detail_content"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/quota"
                    app:layout_constraintTop_toBottomOf="@id/event_location"
                    tools:text="Category" />

                <View
                    android:id="@+id/line"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="8dp"
                    android:background="@color/charcoal_grey"
                    app:layout_constraintTop_toBottomOf="@id/event_quota"/>

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/description"
                    style="@style/tv_event_detail_label"
                    app:layout_constraintTop_toBottomOf="@id/line"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/event_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingBottom="72dp"
                    tools:text="Category"
                    style="@style/tv_event_detail_description"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/description"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_web_button"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        app:contentPadding="16dp"
        app:cardElevation="20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/web_button"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:background="@drawable/button_grey"
                android:text="@string/to_website"
                style="@style/tv_event_button"
                android:textAllCaps="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/favorite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/favorite"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/baseline_favorite_border_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/web_button"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/failed_load_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/tv_event_detail_title"
        android:text="@string/failed_to_load_data"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/prog_bar"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:indeterminateTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
