<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".ui.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@color/soft_white">

            <TextView
                android:id="@+id/home_upcoming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_upcoming"
                style="@style/tv_home_title"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:fontFamily="sans-serif-medium"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_home_upcoming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clipToPadding="false"
                android:nestedScrollingEnabled="false"
                app:layout_constraintTop_toBottomOf="@id/home_upcoming"/>

            <TextView
                android:id="@+id/home_finished"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_finished"
                style="@style/tv_home_title"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:fontFamily="sans-serif-medium"
                app:layout_constraintTop_toBottomOf="@id/rv_home_upcoming"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_home_finished"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clipToPadding="false"
                android:nestedScrollingEnabled="false"
                app:layout_constraintTop_toBottomOf="@id/home_finished"/>

            <TextView
                android:id="@+id/failed_load_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/tv_event_detail_title"
                android:text="@string/failed_to_load_data"
                android:visibility="gone"
                android:textColor="@color/black"
                android:padding="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/prog_bar"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:indeterminateTint="@color/dicoding_blue"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="gone"/> <!-- Hide by default -->

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
